fix(label): added missing margin bottom

--- a/styles/web/sass/core/widgets/_inputs.scss
+++ b/styles/web/sass/core/widgets/_inputs.scss
@@ -121,6 +121,7 @@ textarea.form-control {
         font-weight: $form-label-weight;
         overflow: hidden;
         text-overflow: ellipsis;
+        margin-bottom: 5px;
     }
     .mx-validation-message {
         flex-basis: 100%;
@@ -142,31 +143,29 @@ textarea.form-control {
     flex: 1;
 }
 
-// Orientation
-.form-horizontal {
-    @media (min-width: $screen-sm) {
-        .control-label {
-            padding-top: $form-input-padding-y;
-            padding-bottom: $form-input-padding-y;
-            line-height: $form-input-line-height;
-        }
-    }
-}
-
 // Form group orientation
 .form-horizontal .form-group,
 .form-vertical .form-group:not(.label-after) {
     flex-direction: column;
 }
-@media only screen and (min-width: 768px) {
-    .form-horizontal .form-group {
-        flex-direction: row;
-    }
-}
 
 // Targets only webkit iOS devices
 .dj_webkit.dj_ios .form-control {
     transform: translateZ(0);
+}
+
+@media only screen and (min-width: $screen-sm) {
+    .form-horizontal {
+        .form-group {
+            flex-direction: row;
+        }
+        .control-label {
+            padding-top: $form-input-padding-y;
+            padding-bottom: $form-input-padding-y;
+            line-height: $form-input-line-height;
+            margin-bottom: 0;
+        }
+    }
 }
 
 // Fixes alignment bug on iPads / iPhones where datefield is not aligned vertically
